--- a/render.yaml
+++ b/render.yaml
@@ -1,8 +1,8 @@
 services:
   - name: backup-db
     type: cron
-    schedule: "0 3 * * *"
-    region: oregon
+    schedule: "0 7 * * *" # Run at 7 AM UTC (3/4 AM ET)
+    region: ohio
     env: docker
     plan: standard
     dockerfilePath: ./Dockerfile
@@ -10,7 +10,7 @@ services:
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: replace-with-your-postgres-instance-name
+          name: sumit_db
           property: connectionString
       # pick the region closest to your database
       # For example, us-west-2 for the Oregon region
